Added createContext hooks and modified index.css

--- a/gameweek6/src/App.css
+++ b/gameweek6/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color: #14021000;
+  background-color: #0f010c;
   width: 100vw;
   height: 100vh;
   /* display: flex; */
